overlap fixed, added exclude link logic to keep position of hovered link

--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,22 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* navigation */
 
 main {
   pointer-events: none;
-  top: 0;
-  left: 0;
-  display: flex;
+  
+  /* display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  height: 100%;
+  align-items: flex-start; */
+  /* width: 100%;
+  height: 100%; */
   margin: 0;
   padding: 0;
+  outline: 1px solid red;
 }
 
 a {
@@ -47,6 +47,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
+  outline: 1px solid green;
 }
 
 a::before {
